--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,77 @@
 
+@article{khezri_customized_2022,
+	title = {Customized {Quantum} {Annealing} {Schedules}},
+	volume = {17},
+	url = {https://link.aps.org/doi/10.1103/PhysRevApplied.17.044005},
+	doi = {10.1103/PhysRevApplied.17.044005},
+	number = {4},
+	urldate = {2024-10-11},
+	journal = {Physical Review Applied},
+	author = {Khezri, Mostafa and Dai, Xi and Yang, Rui and Albash, Tameem and Lupascu, Adrian and Lidar, Daniel A.},
+	month = apr,
+	year = {2022},
+	publisher = {American Physical Society},
+	pages = {044005},
+}
+
+@article{perdomo-ortiz_protein_2012,
+	title = {Finding low-energy conformations of lattice protein models by quantum annealing},
+	volume = {2},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/srep00571},
+	doi = {10.1038/srep00571},
+	number = {1},
+	urldate = {2025-01-12},
+	journal = {Scientific Reports},
+	author = {Perdomo-Ortiz, Alejandro and Dickson, Neil and Drew-Brook, Marshall and Rose, Geordie and Aspuru-Guzik, Alán},
+	month = aug,
+	year = {2012},
+	publisher = {Nature Publishing Group},
+	pages = {571},
+}
+
+@article{inoue_traffic_2021,
+	title = {Traffic signal optimization on a square lattice with quantum annealing},
+	volume = {11},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-021-82740-0},
+	doi = {10.1038/s41598-021-82740-0},
+	number = {1},
+	urldate = {2025-01-12},
+	journal = {Scientific Reports},
+	author = {Inoue, Daisuke and Okada, Akihisa and Matsumori, Tadayoshi and Aihara, Kazuyuki and Yoshida, Hiroaki},
+	month = feb,
+	year = {2021},
+	publisher = {Nature Publishing Group},
+	pages = {3303},
+}
+
+@inproceedings{phillipson_portfolio_2021,
+	address = {Cham},
+	title = {Portfolio {Optimisation} {Using} the {D}-{Wave} {Quantum} {Annealer}},
+	isbn = {978-3-030-77980-1},
+	doi = {10.1007/978-3-030-77980-1_4},
+	booktitle = {Computational {Science} -- {ICCS} 2021},
+	publisher = {Springer International Publishing},
+	author = {Phillipson, Frank and Bhatia, Harshil Singh},
+	editor = {Paszynski, Maciej and Kranzlmüller, Dieter and Krzhizhanovskaya, Valeria V. and Dongarra, Jack J. and Sloot, Peter M. A.},
+	year = {2021},
+	pages = {45--59},
+}
+
+@misc{google,
+	title = {Google {Quantum} {AI}},
+	url = {https://quantumai.google/},
+	urldate = {2025-01-12},
+	journal = {Google Quantum AI},
+}
+
+@misc{ibm,
+	title = {{IBM} {Quantum} {Computing}},
+	url = {https://www.ibm.com/quantum/},
+	urldate = {2025-01-12},
+}
+
 @book{owsinski_mixing_2017,
 	title = {The {Mixing} {Engineer}'s {Handbook}},
 	isbn = {978-0-9985033-4-9},
