Create new plots

--- a/Code/CompareToClassical.ipynb
+++ b/Code/CompareToClassical.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "IDENTIFIER = \"beethoven-op67\"\n",
+    "NUM = 3\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
     "import networkx as nx\n",
@@ -16,43 +18,21 @@
     "from dwave.samplers import SteepestDescentSolver, SimulatedAnnealingSampler, TabuSampler\n",
     "import dwave.inspector\n",
     "\n",
-    "from plotters import plotHistogram, annotateSampleGraph, plotCSV, plotSampleGraph, plotArrangement\n",
+    "from plots import plotHistogram, plotCSV, plotSampleGraph\n",
     "from qubo import createBQM\n",
-    "from sampleAnalysis import duplicates, findOverlaps, totalEntropy\n",
+    "from samples import totalEntropy, firstValid, overlaps, duplicates\n",
     "\n",
-    "identifier = \"Haydn-4\"\n",
-    "path = f\"../Pickles/{identifier}/{identifier}_\"\n",
+    "picklePath = f\"../Pickles/{IDENTIFIER}/{IDENTIFIER}_\"\n",
+    "numPath = f\"../Pickles/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
+    "dataPath = f\"../Data/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
     "\n",
-    "instruments = json.load(open(path + \"instruments.json\"))\n",
-    "phrases = pickle.load(open(path + \"phrases.pkl\", \"rb\"))\n",
-    "G = nx.read_graphml(path + \"graph.graphml\")\n",
-    "embedding = json.load(open(path + \"embedding.json\", \"r\"))\n",
-    "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)\n",
+    "phrases = pd.read_csv(picklePath + \"phrases.csv\", index_col=[0,1])\n",
+    "G = nx.read_graphml(picklePath + \"graph.graphml\")\n",
+    "instruments = json.load(open(numPath + \"instruments.json\"))\n",
+    "embedding = json.load(open(numPath + \"embedding.json\", \"r\"))\n",
     "\n",
     "# Re-record samples with lower chain strength and anneal time\n",
     "# Ignore low energy samples that don't fulfil constraints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reads = 3500\n",
-    "\n",
-    "bqm = createBQM(G, phrases, instruments, 6, 6, 1)\n",
-    "sampleset = qa.sample(bqm, num_reads=reads, label=f\"Haydn_{reads}\")\n",
-    "plotSampleGraph(sampleset.first.sample, G, instruments)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotArrangement(sampleset.first.sample, phrases, instruments, \"four.mid\")"
    ]
   },
   {
@@ -88,23 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 reads recorded!\n",
+      "400 reads recorded!\n",
+      "600 reads recorded!\n",
+      "800 reads recorded!\n",
+      "1000 reads recorded!\n",
+      "1200 reads recorded!\n",
+      "1400 reads recorded!\n",
+      "1600 reads recorded!\n",
+      "1800 reads recorded!\n",
+      "2000 reads recorded!\n",
+      "200 reads recorded!\n",
+      "400 reads recorded!\n",
+      "600 reads recorded!\n",
+      "800 reads recorded!\n",
+      "1000 reads recorded!\n",
+      "1200 reads recorded!\n",
+      "1400 reads recorded!\n",
+      "1600 reads recorded!\n",
+      "1800 reads recorded!\n",
+      "2000 reads recorded!\n"
+     ]
+    }
+   ],
    "source": [
-    "ta = TabuSampler().sample(bqm, num_reads=reads)\n",
-    "\n",
-    "print(f\"Overlaps: {findOverlaps(annotateSampleGraph(ta.first.sample, G))}\")\n",
-    "print(f\"Duplicates: {len(duplicates(ta.first.sample, G))}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cs = 25\n",
+    "cs = 30\n",
     "at = 200\n",
     "\n",
     "def recordEnergyReads(readRange, bqm, sampler, filepath: str, header: bool = False, quantum: bool = False):\n",
@@ -113,33 +108,29 @@
     "    for r in readRange:\n",
     "\n",
     "        if quantum:\n",
-    "            sampleset = sampler.sample(bqm, num_reads=r, chain_strength=cs, annealing_time=at,label=f\"Haydn_{r}_{cs}_{at}us\")\n",
+    "            sampleset = sampler.sample(bqm, num_reads=r, chain_strength=cs, annealing_time=at,label=f\"{IDENTIFIER}_{r}_{cs}_{at}\")\n",
     "        else:\n",
     "            sampleset = sampler.sample(bqm, num_reads=r)\n",
     "        \n",
     "        sample = sampleset.first\n",
     "\n",
-    "        A = annotateSampleGraph(sample.sample, G)\n",
-    "\n",
     "        if quantum:\n",
     "            new_row = pd.DataFrame({\n",
     "                \"Total reads\": [r],\n",
-    "                \"Time\": [sampleset.info[\"timing\"][\"qpu_access_time\"]],\n",
-    "                \"Chain strength\": [sampleset.info[\"embedding_context\"][\"chain_strength\"]],\n",
+    "                \"Time\": [sampleset.info[\"timing\"][\"qpu_sampling_time\"]],\n",
+    "                \"Chain strength\": [cs],\n",
     "                \"Chain break fraction\": [sample.chain_break_fraction],\n",
     "                \"Lowest energy\": [bqm.energy(sample.sample)],\n",
-    "                \"Total entropy\": [totalEntropy(A)],\n",
-    "                \"Overlaps\": [findOverlaps(annotateSampleGraph(sample.sample, G))],\n",
-    "                \"Duplicates\": [len(duplicates(sample.sample, G))]\n",
+    "                \"Total entropy\": [totalEntropy(sample.sample, G)],\n",
+    "                \"Overlaps\": [overlaps(sample.sample, G)],\n",
+    "                \"Duplicates\": [duplicates(sample.sample, G)]\n",
     "                })\n",
     "        else:\n",
     "            new_row = pd.DataFrame({\n",
     "                \"Total reads\": [r],\n",
     "                \"Lowest energy\": [bqm.energy(sample.sample)],\n",
-    "                \"Total entropy\": [totalEntropy(A)],\n",
+    "                \"Total entropy\": [totalEntropy(sample.sample, G)],\n",
     "                \"Time\": [sampleset.info[\"timing\"][\"sampling_ns\"]/1000],\n",
-    "                \"Overlaps\": [findOverlaps(A)],\n",
-    "                \"Duplicates\": [len(duplicates(sample.sample, G))]\n",
     "                })\n",
     "    \n",
     "        print(f\"{r} reads recorded!\")\n",
@@ -147,17 +138,17 @@
     "\n",
     "    file.to_csv(filepath, index=False, mode=\"a\", header=header)\n",
     "\n",
-    "bqm = createBQM(G, phrases, instruments, 6, 6, 1)\n",
+    "bqm = createBQM(G, phrases, instruments, 6, 12, 1) # CHANGE\n",
     "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)\n",
     "sa = SimulatedAnnealingSampler()\n",
     "sd = SteepestDescentSolver()\n",
-    "ta = TabuSampler()\n",
     "\n",
-    "readRange = np.arange(200,2001,200)\n",
+    "# 200 to 2000 repeated\n",
+    "readRange = np.arange(200,2200,200)\n",
     "\n",
-    "recordEnergyReads(readRange, bqm, qa, path+\"qa-reads.csv\", quantum=True)\n",
-    "recordEnergyReads(readRange, bqm, sa, path+\"sa-reads.csv\", quantum=False)\n",
-    "recordEnergyReads(readRange, bqm, sd, path+\"sd-reads.csv\", quantum=False)"
+    "#recordEnergyReads(readRange, bqm, qa, dataPath+\"qa-reads.csv\", quantum=True, header=False)\n",
+    "recordEnergyReads(readRange, bqm, sa, dataPath+\"sa-reads.csv\", quantum=False, header=False)\n",
+    "recordEnergyReads(readRange, bqm, sd, dataPath+\"sd-reads.csv\", quantum=False, header=False)"
    ]
   },
   {
